Performance improvement by using ArrayDeque instead of an ArrayList for the available puddle threads.